# diom

./: .clippy.toml  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  .vacuum.yaml  Cargo.toml  ChangeLog.md  Claude.md  Dockerfile  Dockerfile.rego  ENVIRONMENT_VARIABLES.md  LICENSE  README.md  RELEASING.md  bootstrap.default.yaml  config.bench.toml  config.default.toml  config.defaults.toml  deny.toml  description.md  development.env  dist-workspace.toml  docker-compose.yml  justfile  lint.sh  openapi.json  package-lock.json  package.json  test.sh  testing-docker-compose.yml
benchmarks/: Cargo.toml
benchmarks/benches/: cache.rs  idempotency.rs  kv.rs  msgs.rs  queue.rs  rate_limit.rs  rate_limiter.rs  stream.rs
benchmarks/src/: lib.rs
clients/cli/: Cargo.toml
clients/cli/src/: config.rs  json.rs  main.rs  utils.rs
clients/cli/src/cmds/: benchmark.rs  cluster.rs  mod.rs
codegen/: Cargo.toml  README.md
codegen/formatters/: goimports.Containerfile  ruff.Containerfile
codegen/src/: formatting.rs  go.rs  java.rs  javascript.rs  main.rs  outputs.rs  python.rs  rust.rs  utils.rs
codegen/templates/cli/: api_resource.rs.jinja  api_summary.rs.jinja
codegen/templates/cli_js/: api_resource.ts.jinja  api_summary.ts.jinja
codegen/templates/go/: api_resource.go.jinja  api_summary.go.jinja  component_type.go.jinja  component_type_summary.go.jinja
codegen/templates/go/types/: integer_enum.go.jinja  macros.go.jinja  string_enum.go.jinja  struct.go.jinja  struct_enum.go.jinja  struct_fields.go.jinja
codegen/templates/java/: api_resource.java.jinja  api_summary.java.jinja  component_type.java.jinja
codegen/templates/java/types/: integer_enum.java.jinja  macros.java.jinja  string_enum.java.jinja  struct.java.jinja  (+1 more)
codegen/templates/javascript/: api_resource.ts.jinja  api_summary.ts.jinja  component_type_summary.ts.jinja  summary.ts.jinja
codegen/templates/python/: api_resource.py.jinja  api_summary.py.jinja  summary.py.jinja
codegen/templates/rust/: api_resource.rs.jinja  api_summary.rs.jinja  component_type_summary.rs.jinja
coyote/: Cargo.toml  config.default.toml  development.env
coyote/src/: cfg.rs  lib.rs  main.rs  openapi.rs  wait_for.rs
coyote/src/core/: mod.rs  otel_spans.rs  security.rs
coyote/src/static/: docs.html
coyote/src/v1/: mod.rs
coyote/tests/: config.rs
coyote/tests/it/: db.rs  e2e_application.rs  e2e_attempt.rs  e2e_auth.rs  e2e_endpoint.rs  e2e_event_type.rs  e2e_health.rs  e2e_message.rs  e2e_operational_webhooks.rs  e2e_proxy.rs  integ_webhook_http_client.rs  main.rs  message_app.rs  redis_queue.rs  worker.rs
crates/auth-token/: Cargo.toml
crates/auth-token/src/: controller.rs  entities.rs  lib.rs  storage.rs  tables.rs
crates/cache/: Cargo.toml
crates/cache/src/: compaction.rs  controller.rs  lib.rs  tables.rs
crates/coyote-authorization/: Cargo.toml
crates/coyote-authorization/src/: lib.rs  pattern.rs  verification.rs
crates/coyote-core/: Cargo.toml
crates/coyote-core/src/: backoff.rs  fifo_cache.rs  instrumented_mutex.rs  lib.rs  monotime.rs  shutdown.rs  task.rs  types.rs  validation.rs
crates/coyote-derive/: Cargo.toml
crates/coyote-derive/src/: aide.rs  lib.rs
crates/coyote-error/: Cargo.toml
crates/coyote-error/src/: can_fail_ext.rs  lib.rs  option_ext.rs  result_ext.rs  validation.rs
crates/coyote-namespace/: Cargo.toml
crates/coyote-namespace/src/: entities.rs  lib.rs  tables.rs
crates/coyote-operations/: Cargo.toml
crates/coyote-operations/src/: context.rs  lib.rs  macros.rs  monotime.rs  workers.rs
crates/coyote-proto/: Cargo.toml
crates/coyote-proto/src/: error.rs  internal_client.rs  lib.rs  msgpack.rs  msgpack_client.rs  msgpack_or_json.rs  request_input.rs  validated_json.rs  validation.rs
crates/coyote-transformations/: Cargo.toml
crates/coyote-transformations/src/: engine.rs
crates/diom-admin-auth/: Cargo.toml
crates/diom-admin-auth/src/: controller.rs  lib.rs  storage.rs  tables.rs
crates/diom-authorization/: Cargo.toml
crates/diom-authorization/src/: api.rs  context.rs  lib.rs  list.rs  pattern.rs  verification.rs
crates/diom-configgroup/: Cargo.toml
crates/diom-configgroup/src/: lib.rs  tables.rs
crates/diom-core/: Cargo.toml
crates/diom-core/src/: fifo_cache.rs  json.rs  lib.rs  monotime.rs  persistable_value.rs  task.rs  types.rs  validation.rs
crates/diom-error/: Cargo.toml
crates/diom-error/src/: lib.rs  option_ext.rs  result_ext.rs  validation.rs
crates/diom-id/: Cargo.toml
crates/diom-id/src/: lib.rs  marker.rs  module.rs  public.rs
crates/diom-namespace/: Cargo.toml
crates/diom-namespace/src/: entities.rs  lib.rs  storage.rs  tables.rs
crates/diom-operations/: Cargo.toml
crates/diom-operations/src/: context.rs  lib.rs  macros.rs  workers.rs
crates/diom-proto/: Cargo.toml
crates/diom-proto/src/: error.rs  internal_client.rs  lib.rs  msgpack.rs  msgpack_client.rs  msgpack_or_json.rs  msgpack_or_json2.rs  postcard_.rs  postcard_client.rs  prelude.rs  request_input.rs  validated_json.rs
crates/diom-rate-limiter/: Cargo.toml
crates/diom-rate-limiter/src/: lib.rs
crates/diom-transformations/: Cargo.toml
crates/diom-transformations/src/: engine.rs  lib.rs  worker.rs
crates/fjall-utils/: Cargo.toml
crates/fjall-utils/benches/: postcard_serialize.rs
crates/fjall-utils/src/: db.rs  duration_millis.rs  fixed_key.rs  fjall_key_able.rs  lib.rs  options.rs  readonly_db.rs  table_row.rs  table_row2.rs  transaction_keyspace.rs
diom/: Cargo.toml  config.default.toml
diom/src/: Session.vim  cfg.rs  error.rs  lib.rs  main.rs  wait_for.rs
diom/src/core/: otel_spans.rs  security.rs
diom/src/v1/: mod.rs
diom/tests/: config.rs
diom/tests/it/: db.rs  e2e_application.rs  e2e_attempt.rs  e2e_auth.rs  e2e_endpoint.rs  e2e_event_type.rs  e2e_health.rs  e2e_message.rs  e2e_operational_webhooks.rs  e2e_proxy.rs  integ_webhook_http_client.rs  main.rs  message_app.rs  redis_queue.rs  worker.rs
node/: Cargo.toml
node/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  otel.rs  tracing_panic_hook.rs
(+2847 files in other folders)
