### Library manifest ###
[package]
name = "coyote"
publish = false
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition = "2024"

[package.metadata.cargo-machete]
ignored = [
    # not a direct dependency, but we want to pin its version
    "idna_adapter",
]

[features]
# FIXME: Make this actually effective by switching from using schemars'
#        derive directly to using our own wrapper (like webhooks-private)
openapi = []

[dependencies]
aide.workspace = true
anyerror.workspace = true # not a direct dependency, but we need to enable one of its features
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
byteorder.workspace = true
bytes.workspace = true
config.workspace = true
coyote-derive.workspace = true
coyote-error.workspace = true
coyote-kv.workspace = true
coyote-proto.workspace = true
coyote-rate-limiter.workspace = true
fjall.workspace = true
http.workspace = true
idna_adapter.workspace = true
indexmap.workspace = true
jiff.workspace = true
jwt-simple.workspace = true
openraft.workspace = true
opentelemetry.workspace = true
opentelemetry-http.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk.workspace = true
paste.workspace = true
pnet.workspace = true
regex.workspace = true
reqwest.workspace = true
rmp-serde.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
stream.workspace = true
tap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
url.workspace = true
uuid.workspace = true
validator.workspace = true
zip.workspace = true

[dev-dependencies]
assert_matches.workspace = true
ctor.workspace = true
rmpv.workspace = true
tempfile.workspace = true
test-utils.workspace = true

[lints]
workspace = true

### Workspace manifest ###
[workspace]
members = [
    "clients/cli",
    "clients/rust",
    "codegen",
    "crates/*",
    "node",
]
# By default, don't build extra helpers like codegen.
default-members = [".", "node", "crates/*"]
resolver = "2"

[workspace.package]
license = "MIT"
version = "1.76.1"
rust-version = "1.91"

[workspace.dependencies]
aide = { version = "=0.16.0-alpha.2", features = ["axum", "axum-json", "axum-query", "macros"] }
anyerror = { version = "0.1.13", features = ["anyhow"] }
anyhow = "1.0.56"
assert_matches = "1.5.0"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
byteorder = "1.5.0"
bytes = "1.1.0"
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.5.38"
colored_json = "5.0.0"
concolor-clap = "0.1.0"
config = { version = "0.15.19", default-features = false, features = ["toml"] }
coyote.path = "."
coyote-client.path = "clients/rust"
coyote-derive.path = "crates/coyote-derive"
coyote-error.path = "crates/coyote-error"
coyote-kv.path = "crates/kv"
coyote-proto.path = "crates/coyote-proto"
coyote-rate-limiter.path = "crates/rate-limiter"
ctor = "0.6.3"
dirs = "6.0.0"
dotenvy = "0.15.7"
fjall = { version = "3.0.1", features = ["lz4", "metrics"] }
fjall-utils.path = "crates/fjall-utils"
hashlink = "0.11"
hex = "0.4.3"
hickory-resolver = "0.25.2"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.8.1", features = ["full"] }
hyper-rustls = "0.27.7"
hyper-tls = "0.6.0"
hyper-util = "0.1.19"
# Reduce compile times for idna (we don't need the fastest possible impl of UTS 46)
# As per https://github.com/hsivonen/idna_adapter?tab=readme-ov-file#opting-to-use-unicode-rs
idna_adapter = "=1.1.0"
indexmap = "2.6.0"
itertools = "0.14"
jiff = { version = "0.2.18", features = ["serde"] }
jwt-simple = "0.12"
mime = "0.3"
num_enum = "0.7.2"
openapi-codegen = { git = "https://github.com/svix/openapi-codegen", rev = "0a51d3898dab5943404890c31788f81e2f07f22e" }
openraft = { version = "0.9.21", features = ["tracing-log", "anyhow", "serde", "storage-v2"] }
opentelemetry = { version = "0.31.0", features = ["metrics"] }
opentelemetry-http = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["internal-logs", "metrics", "grpc-tonic", "http-proto", "reqwest-client"] }
opentelemetry-proto = { version = "0.31.0", default-features = false, features = ["internal-logs", "gen-tonic", "trace", "with-serde"] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["metrics", "rt-tokio", "rt-tokio-current-thread", "experimental_metrics_periodicreader_with_async_runtime", "experimental_trace_batch_span_processor_with_async_runtime"] }
paste = "1.0.15"
percent-encoding = "2.3.2"
pnet = "0.35"
proc-macro2 = "1.0.78"
quote = "1.0.15"
rand = "0.9.2"
regex = "1.5.5"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "hickory-dns", "stream"] }
rmp-serde = "1.3.1"
rmpv = "1.3.1"
rustls = "0.23.31"
schemars = { version = "1.2.0", features = ["jiff02", "uuid1"] }
serde = { version = "1.0.184", features = ["derive", "rc"] }
serde_json = { version = "1.0.74", features = ["arbitrary_precision", "raw_value"] }
serde_path_to_error = "0.1.7"
static_assertions = "1.1"
stream.path = "crates/stream"
syn = "2.0.48"
tap = "1"
tempfile = "3.24.0"
test-utils.path = "crates/test-utils"
tokio = { version = "1.24.2", features = ["rt", "signal", "fs"] }
tokio-util = "0.7"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace", "cors", "normalize-path", "request-id"] }
tower-service = "0.3.3"
tracing = "0.1.35"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "local-time", "fmt", "registry", "std"] }
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
zip = "7"

[workspace.lints.rust]
# Can't forbid as we use at least one macro that expands to unsafe code
unsafe_code = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_numeric_casts = "warn"
# emitted by #[tokio::main(flavor = "local")]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tokio_unstable)"] }
unreachable_pub = "warn"

[workspace.lints.clippy]
await_holding_lock = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
enum_glob_use = "warn"
filter_map_next = "warn"
if_let_mutex = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
mem_forget = "warn"
mut_mut = "warn"
needless_continue = "warn"
nonstandard_macro_braces = "warn"
option_option = "warn"
redundant_clone = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
todo = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
verbose_file_reads = "warn"
# disabled default lints
enum_variant_names = "allow"
new_without_default = "allow"

[profile.dev]
debug = 0

[profile.dev.build-override]
# optimize host dependencies for faster rebuilds.
# slows down compilation of those dependencies, but they'll not be compiled
# nearly as often as workspace crates in local development.
opt-level = 3
strip = true
