[package]
name = "diom-benchmarks"
publish = false
edition = "2024"
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
diom.workspace = true
diom-client.workspace = true
criterion.workspace = true
rand.workspace = true
tempfile.workspace = true
test-utils.workspace = true
tokio.workspace = true

[dev-dependencies]

[lints]
workspace = true

[[bench]]
name = "kv"
harness = false
