[package]
name = "diom-benchmarks"
publish = false
edition = "2024"
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
diom.workspace = true
diom-client.workspace = true
criterion.workspace = true
openraft.workspace = true
rand.workspace = true
reqwest.workspace = true
tempfile.workspace = true
test-utils.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]

[lints]
workspace = true

[[bench]]
name = "kv"
harness = false
