[package]
name = "diom-benchmarks"
publish = false
edition = "2024"
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
diom.workspace = true
diom-client.workspace = true
criterion.workspace = true
openraft.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
test-utils.workspace = true
tokio.workspace = true

[dev-dependencies]

[lints]
workspace = true

[[bench]]
name = "kv"
harness = false

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "idempotency"
harness = false

[[bench]]
name = "rate_limit"
harness = false

[[bench]]
name = "stream"
harness = false

[[bench]]
name = "queue"
harness = false
