[package]
name = "codegen"
license.workspace = true
version.workspace = true
rust-version.workspace = true
edition = "2024"

[features]
# This Cargo feature flag exists so rust-analyzer doesn't enable coyote's
# openapi feature, which is expensive for compile times.
# This is important for Cargo commands spawned by RA in particular.
generate = ["coyote/openapi"]

[dependencies]
aide.workspace = true
anyhow.workspace = true
async-io = { version = "2.6.0", features = ["tracing"] }
async-process = { version = "2.5.0", features = ["tracing"] }
coyote.workspace = true
futures-lite = { version = "2.6.1", default-features = false }
openapi-codegen.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
which.workspace = true

[lints]
workspace = true
