[package]
name = "codegen"
license.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true
edition = "2024"

[features]
# This Cargo feature flag exists so rust-analyzer doesn't enable diom's
# openapi feature, which is expensive for compile times.
# This is important for Cargo commands spawned by RA in particular.
generate = ["diom-backend/openapi"]

[dependencies]
aide.workspace = true
anyhow.workspace = true
async-io = { version = "2.6.0", features = ["tracing"] }
async-process = { version = "2.5.0", features = ["tracing"] }
diom-backend.workspace = true
fs-err.workspace = true
futures-lite = { version = "2.6.1", default-features = false }
openapi-codegen.workspace = true
# this feature enablement is required so declared field order
# for structs used in the API is preserved into openapi.json
schemars = { workspace = true, features = ["preserve_order"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
which.workspace = true

[lints]
workspace = true
