[package]
name = "coyote"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
# bump .github/workflows/server-ci.yml when changing this
rust-version = "1.85"

[package.metadata.cargo-machete]
ignored = [
    # not a direct dependency, but we want to pin its version
    "idna_adapter",
]

[features]
default = ["jemalloc", "openapi", "generate_openapi_spec"]
jemalloc = ["dep:tikv-jemallocator"]
openapi = []
# internal flag used by generate-openapi crate in the workspace
generate_openapi_spec = []

[dependencies]
aide.workspace = true
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
coyote-derive.workspace = true
crossbeam.workspace = true
crossbeam-skiplist.workspace = true
dashmap.workspace = true
dotenvy.workspace = true
enum_dispatch.workspace = true
figment.workspace = true
form_urlencoded.workspace = true
futures.workspace = true
hex.workspace = true
hickory-resolver.workspace = true
http.workspace = true
http-body-util.workspace = true
http02.workspace = true
hyper.workspace = true
hyper-openssl.workspace = true
hyper-util.workspace = true
idna_adapter.workspace = true
indexmap.workspace = true
ipnet.workspace = true
itertools.workspace = true
jsonschema.workspace = true
jwt-simple.workspace = true
num_enum.workspace = true
opentelemetry.workspace = true
opentelemetry-http.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
svix-ksuid.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
urlencoding.workspace = true
validator.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }

[dev-dependencies]
assert_matches.workspace = true
axum-server.workspace = true
ctor.workspace = true

[lints]
workspace = true
