[package]
name = "diom"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
# bump .github/workflows/server-ci.yml when changing this
rust-version = "1.85"

[package.metadata.cargo-machete]
ignored = [
    # not a direct dependency, but we want to pin its version
    "idna_adapter",
]

[features]
default = ["openapi", "generate_openapi_spec"]
openapi = []
# internal flag used by generate-openapi crate in the workspace
generate_openapi_spec = []

[dependencies]
aide.workspace = true
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
bytes.workspace = true
clap.workspace = true
diom-derive.workspace = true
crossbeam.workspace = true
crossbeam-skiplist.workspace = true
dotenvy.workspace = true
figment.workspace = true
hex.workspace = true
http.workspace = true
hyper.workspace = true
idna_adapter.workspace = true
indexmap.workspace = true
itertools.workspace = true
jiff.workspace = true
jwt-simple.workspace = true
opentelemetry.workspace = true
opentelemetry-http.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk.workspace = true
regex.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
assert_matches.workspace = true
ctor.workspace = true

[lints]
workspace = true
