[package]
name = "diom-node"
version.workspace = true
license.workspace = true
edition = "2024"

[[bin]]
name = "diom"
path = "src/main.rs"
doctest = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
diom.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
