[package]
name = "coyote-server"
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
coyote.workspace = true
coyote-core.workspace = true
coyote-transformations.workspace = true
dotenvy.workspace = true
mimalloc.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
