[package]
name = "diom-server"
version.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
comfy-table.workspace = true
diom.workspace = true
diom-core.workspace = true
dotenvy.workspace = true
fs-err.workspace = true
mimalloc.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk.workspace = true
reqwest.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
