[package]
name = "coyote-cli"
license.workspace = true
version.workspace = true
rust-version.workspace = true
edition = "2024"

[package.metadata.cargo-machete]
ignored = [
    # not a direct dependency, but we want to pin its version
    # see comment in root Cargo.toml
    "idna_adapter",
]

[[bin]]
name = "coyote"
path = "src/main.rs"
doctest = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
colored_json.workspace = true
comfy-table = "7"
concolor-clap.workspace = true
config.workspace = true
coyote-client.workspace = true
dirs.workspace = true
futures = "0.3.32"
governor = "0.7"
hdrhistogram = "7.5.4"
idna_adapter.workspace = true
indicatif = "0.17"
quanta = "0.12"
rand.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
