[package]
name = "coyote-cli"
license.workspace = true
version.workspace = true
rust-version.workspace = true
edition = "2024"

[package.metadata.cargo-machete]
ignored = [
    # not a direct dependency, but we want to pin its version
    # see comment in root Cargo.toml
    "idna_adapter",
]

[features]
default = ["http1", "http2", "rustls-tls"]

http1 = ["coyote-client/http1"]
http2 = ["coyote-client/http2"]
native-tls = ["coyote-client/native-tls"]
rustls-tls = ["coyote-client/rustls-tls"]

[[bin]]
name = "coyote"
path = "src/main.rs"
doctest = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
colored_json.workspace = true
comfy-table = "7"
concolor-clap.workspace = true
config.workspace = true
coyote-client.workspace = true
dirs.workspace = true
futures-util.workspace = true
hdrhistogram = "7.5.4"
idna_adapter.workspace = true
indicatif = "0.17"
rand.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
